# spacefm

./: .clang-format  .clang-tidy  .gitignore  README.md  clang-format.sh  conf.sh  meson.build  meson_options.txt  spacefm_0.9.4+git20141001.orig.tar.xz.delta  spacefm_0.9.4+git20141001.orig.tar.xz.id  spacefm_0.9.9+git20150313.ad8c8f8ce6.orig.tar.xz.delta  spacefm_0.9.9+git20150313.ad8c8f8ce6.orig.tar.xz.id  spacefm_1.0.0.orig.tar.xz.delta  spacefm_1.0.0.orig.tar.xz.id  spacefm_1.0.1.orig.tar.xz.delta  spacefm_1.0.1.orig.tar.xz.id  spacefm_1.0.2.orig.tar.xz.delta  spacefm_1.0.2.orig.tar.xz.id  spacefm_1.0.3.orig.tar.xz.delta  spacefm_1.0.3.orig.tar.xz.id  spacefm_1.0.4.orig.tar.gz.delta  spacefm_1.0.4.orig.tar.gz.id  spacefm_1.0.5+git20180130.orig.tar.xz.delta  spacefm_1.0.5+git20180130.orig.tar.xz.id  spacefm_1.0.5.orig.tar.gz.delta  spacefm_1.0.5.orig.tar.gz.id  spacefm_1.0.6.orig.tar.gz.delta  spacefm_1.0.6.orig.tar.gz.id  spacefm_2.1.0.orig.tar.gz.delta  spacefm_2.1.0.orig.tar.gz.id  spacefm_3.0.0~git20230930.orig.tar.xz.delta  spacefm_3.0.0~git20230930.orig.tar.xz.id
data/applications/: spacefm-find.desktop  spacefm-folder-handler.desktop  spacefm.desktop
data/html/: build-manual.sh
data/lib/: fmlib.fish
data/scripts/: config-update  config-update-git
data/ui/: file_properties3.ui  find-files2.ui  find-files3.ui  godlg.ui  prefdlg2.ui  prefdlg3.ui
debian/: changelog  changelog.orig  clean_gtk3.sh  control  copyright  menu  rules  spacefm-auth.1  spacefm-common.dirs  spacefm-common.install  spacefm-common.postinst  spacefm-gtk2.install  spacefm-gtk3.doc-base  spacefm-gtk3.install  spacefm-gtk3.lintian-overrides  spacefm-gtk3.manpages  spacefm-gtk3.postinst  spacefm-gtk3.postrm  spacefm-hal.install  spacefm-hal.lintian-overrides  spacefm-hal.postinst  spacefm-hal.postrm  spacefm.1  spacefm.install  spacefm.lintian-overrides  spacefm.manpages  spacefm.postinst  spacefm.postrm  ubuntu-unity.sh  watch
debian/patches/: add_optional_close_last_tab.patch  drop-gnome-common-macros.patch  drop_spacefm-installer.patch  fix-ftbfs.patch  fix-gcc10-fno-common.patch  fix-spelling-error.patch  fix_hardening_FTBFS.patch  fix_included_inotify.patch  fix_linux-inotify-syscalls.h.patch  fix_memory_leak.patch  fix_thumbnails.patch  series  ubuntu-unity.patch  ubuntu.series  update_desktop_files.patch
debian/upstream/: metadata
doc/: spacefm-design-menu.7  spacefm-devices.7  spacefm-dialog.7  spacefm-gui.7  spacefm-handlers.7  spacefm-plugins.7  spacefm-scripts-sys.7  spacefm-scripts.7  spacefm-socket.7  spacefm-tasks.7  spacefm.1
extra/: README-GTK3.md  gtk.css
pch/: cxx_pch.hxx
po/: sv.po
src/: about.cxx  about.hxx  autosave.cxx  autosave.hxx  bookmarks.cxx  bookmarks.hxx  cust-dialog.c  cust-dialog.h  extern.h  file-search.cxx  file-search.hxx  find-files.c  find-files.h  go-dialog.c  go-dialog.h  gtk2-compat.h  ipc-command.cxx  ipc-command.hxx  ipc.cxx  ipc.hxx  item-prop.c  item-prop.h  main-window.c  main-window.cxx  main-window.h  main-window.hxx  main.c  main.cxx  pcmanfm.h  pref-dialog.c  pref-dialog.h  preference-dialog.cxx  preference-dialog.hxx  private.h  program-timer.cxx  program-timer.hxx  scripts.cxx  scripts.hxx  settings.c  settings.cxx  (+17 more)
src/commandline/: commandline.cxx  commandline.hxx  socket.cxx  socket.hxx
src/compat/: gtk4-porting.cxx  gtk4-porting.hxx  type-conversion.cxx  type-conversion.hxx
src/exo/: README  exo-binding.c  exo-binding.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-common.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-gtk-extensions.c  exo-gtk-extensions.h  exo-icon-chooser-dialog.c  exo-icon-chooser-dialog.h  exo-icon-chooser-model.c  exo-icon-chooser-model.h  exo-icon-view.c  exo-icon-view.h  exo-marshal.c  exo-marshal.h  exo-private.c  exo-private.h  exo-string.h  exo-thumbnail-preview.c  exo-thumbnail-preview.h  exo-tree-view.c  exo-tree-view.h  exo-utils.c  exo-utils.h
src/mime-type/: mime-action.c  mime-action.cxx  mime-action.h  mime-action.hxx  mime-cache.c  mime-cache.cxx  mime-cache.h  mime-cache.hxx  mime-type.c  mime-type.cxx  mime-type.h  mime-type.hxx
src/ptk/: ptk-app-chooser.c  ptk-app-chooser.cxx  ptk-app-chooser.h  ptk-app-chooser.hxx  ptk-archiver.cxx  ptk-archiver.hxx  ptk-bookmark-view.cxx  ptk-bookmark-view.hxx  ptk-clipboard.c  ptk-clipboard.cxx  ptk-clipboard.h  ptk-clipboard.hxx  ptk-dialog.cxx  ptk-dialog.hxx  ptk-dir-tree-view.c  ptk-dir-tree-view.cxx  ptk-dir-tree-view.h  ptk-dir-tree-view.hxx  ptk-dir-tree.c  ptk-dir-tree.cxx  ptk-dir-tree.h  ptk-dir-tree.hxx  ptk-file-actions-misc.cxx  ptk-file-actions-misc.hxx  ptk-file-actions-open.cxx  ptk-file-actions-open.hxx  ptk-file-actions-rename.cxx  ptk-file-actions-rename.hxx  ptk-file-archiver.c  ptk-file-archiver.h  ptk-file-browser.c  ptk-file-browser.cxx  ptk-file-browser.h  ptk-file-browser.hxx  ptk-file-icon-renderer.c  ptk-file-icon-renderer.h  ptk-file-list.c  ptk-file-list.cxx  ptk-file-list.h  ptk-file-list.hxx  (+34 more)
src/settings/: app.cxx  app.hxx  config-load.cxx  config-load.hxx  config-save.cxx  config-save.hxx  disk-format.hxx
src/vfs/: vfs-app-desktop.c  vfs-app-desktop.cxx  vfs-app-desktop.h  vfs-app-desktop.hxx  vfs-async-task.c  vfs-async-task.cxx  vfs-async-task.h  vfs-async-task.hxx  vfs-async-thread.cxx  vfs-async-thread.hxx  vfs-device.cxx  vfs-device.hxx  vfs-dir.c  vfs-dir.cxx  vfs-dir.h  vfs-dir.hxx  vfs-execute.c  vfs-execute.h  vfs-file-info.c  vfs-file-info.cxx  vfs-file-info.h  vfs-file-info.hxx  vfs-file-monitor.c  vfs-file-monitor.cxx  vfs-file-monitor.h  vfs-file-monitor.hxx  vfs-file-task.c  vfs-file-task.cxx  vfs-file-task.h  vfs-file-task.hxx  vfs-file-trash.cxx  vfs-file-trash.hxx  vfs-mime-monitor.cxx  vfs-mime-monitor.hxx  vfs-mime-type.c  vfs-mime-type.cxx  vfs-mime-type.h  vfs-mime-type.hxx  vfs-thumbnail-loader.c  vfs-thumbnail-loader.cxx  (+14 more)
src/xset/: xset-custom.cxx  xset-custom.hxx  xset-defaults.cxx  xset-defaults.hxx  xset-design-clipboard.cxx  xset-design-clipboard.hxx  xset-design.cxx  xset-design.hxx  xset-dialog.cxx  xset-dialog.hxx  (+7 more)
subprojects/: toml11.wrap  ztd.wrap
(+24 files in other folders)
